--- a/views/pos_sales_report.xml
+++ b/views/pos_sales_report.xml
@@ -49,7 +49,7 @@
         <field name="model">pos.sales.report.wizard</field>
         <field name="priority" eval="20"/>
         <field name="arch" type="xml">
-            <form string="POS Sales Details" edit="false" create="false" delete="false">
+            <form string="POS Sales Details">
                 <sheet>
                     <button name="action_generate_detail_csv"
                             type="object"
@@ -65,22 +65,20 @@
                     </group>
 
                     <separator string="Detailed Sales Lines"/>
-                    <field name="detail_line_ids"
-                           nolabel="1"
-                           mode="list"
-                           colspan="4"
-                           readonly="1">
+                    <field name="detail_line_ids" nolabel="1" mode="list" colspan="4">
                         <list string="Employee Sales Details">
                             <field name="employee_name"/>
-                            <field name="order_reference"/>
-                            <field name="order_date"/>
-                            <field name="product_name"/>
-                            <field name="category_name"/>
-                            <field name="quantity_sold"/>
-                            <field name="subtotal_excl_tax"/>
-                            <field name="subtotal_incl_tax"/>
-                            <field name="tax_value"/>
-                            <field name="order_total"/>
+                            <field name="employee_name" readonly="1"/>
+                            <field name="order_reference" readonly="1"/>
+                            <field name="order_date" readonly="1"/>
+                            <field name="product_name" readonly="1"/>
+                            <field name="category_name" readonly="1"/>
+                            <field name="quantity_sold" readonly="1"/>
+                            <field name="subtotal_excl_tax" readonly="1"/>
+                            <field name="subtotal_incl_tax" readonly="1"/>
+                            <field name="tax_value" readonly="1"/>
+                            <field name="order_total" readonly="1"/>
+
                         </list>
                     </field>
 
@@ -92,6 +90,7 @@
             </form>
         </field>
     </record>
+
     <!-- Main Wizard Action -->
     <record id="action_pos_sales_report_wizard" model="ir.actions.act_window">
         <field name="name">POS Employee Commission Report</field>
