--- a/views/pos_sales_report.xml
+++ b/views/pos_sales_report.xml
@@ -10,7 +10,7 @@
                     <group string="Filters" col="4">
                         <field name="start_date"/>
                         <field name="end_date"/>
-                        <field name="category_ids" widget="many2many_tags"/>
+<!--                        <field name="category_ids" widget="many2many_tags"/>-->
                         <button name="action_fetch_details" type="object" string="Generate Report"
                                 icon="fa-search" class="btn-primary" style="margin-top:15px;"/>
                         <button name="action_generate_csv" type="object" string="Download Summary CSV"
@@ -83,7 +83,7 @@
                     </field>
 
                     <footer>
-                        <button string="Back to Summary" type="object" name="action_fetch_details" class="btn-default"/>
+<!--                        <button string="Back to Summary" type="object" name="action_fetch_details" class="btn-default"/>-->
                         <button string="Close" class="btn-secondary" special="cancel"/>
                     </footer>
                 </sheet>
