--- a/views/menus.xml
+++ b/views/menus.xml
@@ -7,29 +7,21 @@
               sequence="10"
               groups="point_of_sale.group_pos_manager"/>
 
-    <!-- ✅ Submenu: POS Sales Report -->
     <menuitem id="menu_pos_commission_report"
-              name="POS Commission Report"
+              name="Commission Reports"
               parent="menu_pos_reports_root"
-              action="action_pos_sales_report_wizard"
-              sequence="1"
-              groups="point_of_sale.group_pos_manager"/>
+              action="action_pos_commission_report"
+              sequence="1"/>
 
-    <!-- ✅ Submenu: Customer Report (placeholder for your other report) -->
     <menuitem id="menu_pos_customer_report"
-              name="Customer Report"
+              name="Customer Reports"
               parent="menu_pos_reports_root"
               action="action_pos_customer_report"
-              sequence="2"
-              groups="point_of_sale.group_pos_manager"/>
+              sequence="2"/>
 
-    <!-- POS Sales Report page -->
-    <menuitem
-            id="menu_staff_performance_report"
-            name="Staff Performance"
-            parent="menu_pos_reports_root"
-            action="action_pos_sales_report_page"
-            sequence="10"/>
-
-
+    <menuitem id="menu_pos_staff_performance_report"
+              name="Staff Performance"
+              parent="menu_pos_reports_root"
+              action="action_pos_staff_performance_report"
+              sequence="3"/>
 </odoo>
