--- a/views/staff_service_performance_report_wizard_view.xml
+++ b/views/staff_service_performance_report_wizard_view.xml
@@ -1,30 +1,85 @@
+<?xml version="1.0" encoding="utf-8"?>
 <odoo>
-    <record id="view_pos_sales_report_page_form" model="ir.ui.view">
-        <field name="name">pos.sales.report.page.form</field>
-        <field name="model">pos.sales.report.page</field>
+    <!-- Main Report Form View -->
+    <record id="view_pos_staff_performance_report_form" model="ir.ui.view">
+        <field name="name">pos.staff.performance.report.form</field>
+        <field name="model">pos.staff.performance.report</field>
         <field name="arch" type="xml">
-            <form string="Staff Service Performance Report">
+            <form string="Staff Performance Report">
+                <header>
+                    <button name="action_generate_report" type="object" string="Generate" class="btn-primary"/>
+                    <button name="action_export_csv" type="object" string="Export" class="btn-secondary"/>
+                    <button name="action_clear_filters" type="object" string="Clear" class="btn-default"/>
+                    <field name="state" widget="statusbar" statusbar_visible="draft,generated"/>
+                </header>
                 <sheet>
-                    <group>
+                    <!-- Filters Section -->
+                    <group string="Report Filters" col="4">
                         <field name="start_date"/>
                         <field name="end_date"/>
-                    <field name="branch_id"/>
-<field name="employee_id"/>
+                        <field name="branch_ids" widget="many2many_tags"/>
+                        <field name="employee_ids" widget="many2many_tags"/>
+                    </group>
 
- <button string="Fetch Report" type="object" name="generate_report" class="btn-primary"/>
-    <button string="Download CSV" type="object" name="download_csv" class="btn-secondary"/>                    </group>
-                    <group>
-                        <field name="report_html" nolabel="1"/>
+                    <!-- Summary Section -->
+                    <group string="Report Summary" col="6">
+                        <field name="total_employees" readonly="1"/>
+                        <field name="total_orders" readonly="1"/>
+                        <field name="total_quantity" readonly="1"/>
+                        <field name="total_sales" readonly="1"/>
+                        <field name="total_commission" readonly="1"/>
+                        <field name="report_generated" readonly="1"/>
+                    </group>
+
+                    <!-- Report Data Section -->
+                    <group string="Staff Performance Details" colspan="6">
+                        <field name="report_line_ids" nolabel="1" readonly="1" colspan="6">
+                            <list>
+                                <field name="employee_name"/>
+                                <field name="job_position"/>
+                                <field name="department_name"/>
+                                <field name="branch_name"/>
+                                <field name="work_email"/>
+                                <field name="work_phone"/>
+                                <field name="employee_national_id"/>
+                                <field name="total_orders"/>
+                                <field name="total_quantity"/>
+                                <field name="total_sales"/>
+                                <field name="commission_rate"/>
+                                <field name="sales_target"/>
+                                <field name="earned_commission"/>
+                                <field name="target_achievement_rate"/>
+                            </list>
+                        </field>
                     </group>
                 </sheet>
             </form>
         </field>
     </record>
 
-    <record id="action_pos_sales_report_page" model="ir.actions.act_window">
-        <field name="name">Staff Service Performance Report</field>
-        <field name="res_model">pos.sales.report.page</field>
-        <field name="view_mode">form</field>
+    <!-- List View for Report History -->
+    <record id="view_pos_staff_performance_report_list" model="ir.ui.view">
+        <field name="name">pos.staff.performance.report.list</field>
+        <field name="model">pos.staff.performance.report</field>
+        <field name="arch" type="xml">
+            <list string="Staff Performance Reports">
+                <field name="name"/>
+                <field name="start_date"/>
+                <field name="end_date"/>
+                <field name="total_employees"/>
+                <field name="total_sales"/>
+                <field name="state"/>
+                <field name="report_generated"/>
+            </list>
+        </field>
+    </record>
+
+    <!-- Action -->
+    <record id="action_pos_staff_performance_report" model="ir.actions.act_window">
+        <field name="name">Staff Performance Report</field>
+        <field name="res_model">pos.staff.performance.report</field>
+        <field name="view_mode">list,form</field>
+        <field name="view_id" ref="view_pos_staff_performance_report_list"/>
         <field name="target">current</field>
     </record>
 </odoo>
